fix: fix horizontal scroll showing on chrome-based browsers
If a chrome-based browser is used, overflow: scroll makes both scroll bars permanently visible. changed to overflow-y, so the horizontal bar is not shown.

--- a/src/App.css
+++ b/src/App.css
@@ -715,7 +715,7 @@ body.lockscroll {
     display: block;
     transition: 0.5s;
 
-    overflow: scroll;
+    overflow-y: scroll;
 
     max-height: 40vh;
     height: var(--lyrics-collapsed-height);
